test(8-kyu): add missing tests with junit5